# invNorm

./: .gitignore  CMakeLists.txt  Makefile.inc  README.md
src/: Makefile
test/: Makefile  invNormTest.sh
test/expected/: example.norm
test/testFiles/: example.raw
